--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=4000
 MONGO_URI ="mongodb+srv://Johnatan828:Yokito0826!@cluster0.u9twq.mongodb.net/shareyouridea?retryWrites=true&w=majority"
 APPLICATION_NAME="Share Your Idea"
+JWT_SECRET = iksfjhsdofhjiwopiwqer92384kjak!
